# TareasBases

./: AppService.js  db.js  docker-compose.yml
02 - MongoDB/: Quiz #2 Javier Julian Kendell Carlos.ipynb  create_data.py  data.jsonl  pyproject.toml  test_mongo.ipynb
TareaAPI/: AppService.js  Dockerfile  README.md  app.js  db.js  docker-compose.yml  package-lock.json  package.json
TareaAPI/__tests__/: appTests.js
TareaAPI/database/: 00-init.sql  01-users.sql  02-tasks.sql
