[tool.poetry]
name = "02 - mongodb"
version = "0.1.0"
description = ""
authors = ["kenneth56 <kenneth@ripeta.com>"]
readme = "README.md"
packages = [{include = "02 _ mongodb"}]

[tool.poetry.dependencies]
python = "^3.8"
faker = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
